# Polycursion

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  about.txt  build.sh  main.cpp  polycur.cbp  polycur.depend  polycur.layout  shader.cpp  vert
include/: shader.hpp  timer.h
include/glad/: glad.h
resources/: frag
src/: glad.c  main.cpp  shader.cpp
